# nullrun

./: .gitignore  CLAUDE.md  README.md  business.md  docker-compose.yml  plan.md  progress.md  tech.md
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile.deploy
backend/migrations/: 0001_extensions.sql  0002_users_auth.sql  0003_activity.sql  0004_anticheat.sql  0005_gamification.sql  0006_rewards.sql  0007_quests_wheel.sql  0008_games_duels.sql  0009_guilds.sql  0010_races.sql  0011_partner_events.sql  0012_tasco_vetc_rewards.sql
backend/src/: ai.rs  config.rs  error.rs  main.rs  state.rs
backend/src/activities/: compute.rs  fraud.rs  ingest.rs  mod.rs
backend/src/admin/: mod.rs
backend/src/auth/: jwt.rs  mod.rs  otp.rs  phone.rs  refresh.rs
backend/src/devices/: mod.rs
backend/src/duels/: mod.rs
backend/src/gamification/: games.rs  mod.rs  quests.rs  rules.rs  wheel.rs
backend/src/guilds/: mod.rs
backend/src/mobility/: mod.rs
backend/src/races/: mod.rs
backend/src/rewards/: mod.rs  partner.rs
backend/src/routes/: mod.rs
backend/src/users/: mod.rs
docs/: demo-script.md  init-prompt.md
docs/design/: null-run-full-screens.html  null-run-prototype.html
docs/pitch/: content.md  null-run-deck-v2.html  null-run-deck.html
ios/: README.md  project.yml
ios/NullShift/: Info.plist  NullShiftApp.swift  RootView.swift
ios/UITests/: FlowTests.swift  LoginTest.swift
web/: README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx
web/lib/: api.ts
(+39 files in other folders)
