[package]
name = "nullshift-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }
fred = "10"
validator = { version = "0.20", features = ["derive"] }

dotenvy = "0.15"
thiserror = "2"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

jsonwebtoken = "9"
# AI layer (locked v2 architecture: OpenAI-compatible API via reqwest) —
# rustls so the musl cross-build stays clean.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.9"
sha2 = "0.10"
base64 = "0.22"
